# xtensa-rust-quickstart

./: Cargo.toml  README.md  flash  flash_release  memory.x
.cargo/: config
src/: main.rs
