[package]
name = "esp8266-test"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
xtensa-lx106-rt = { git = "https://github.com/icewind1991/xtensa-lx106-rt", rev = "2cc1e9b963ca2c2323a77562ad41ac620d8ae723" }
esp8266 = "0.0.4"
esp8266-hal = "0.1.0"
nb = "0.1.2"

# NOTE: if you change this, remember to change all the scripts
[[bin]]
name = "esp8266"
path = "src/main.rs"

[profile.dev]
lto = true 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1
