[package]
name = "esp8266-test"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
xtensa-lx106-rt = "0.0.1"
esp8266-hal = "0.2.0"

# NOTE: if you change this, remember to change all the scripts
[[bin]]
name = "esp8266"
path = "src/main.rs"

[profile.dev]
lto = true 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1
