[package]
name = "esp8266-test"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
esp8266-hal = { version = "0.4", path = "../esp8266-hal", features = ["all_in_ram"] }
panic-halt = "0.2.0"

[profile.dev]
lto = true 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1
